--- a/Assignmnent titanic.ipynb
+++ b/Assignmnent titanic.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "#load dataset\n",
-    "titanic_data=pd.read_csv(\"C:/Users/Mehak Goel/Downloads/train.csv\")"
+    "titanic_data=pd.read_csv(\"C:/Users/liv/Documents/train.csv\")"
    ]
   },
   {
